maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:40: error: type mismatch;
 found   : Unit
 required: Int
                      else {if (front && g && d){
                            ^